--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,9 @@
+events {
+}
+
 http {
     server {
-        location ~ /(.+)/.+ {
+        location ~ /(\.+)/\.+ {
             proxy_pass $1:$server_port;
         }
     }
