--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,22 @@
 version: "3.7"
+
 services:
     nginx:
         image: nginx
         restart: always
         volumes:
             - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+        ports:
+            - "80:80"
+        networks:
+            - default
+            - backend
 
     parking:
         image: tylerdoll/better_parking_permits
         restart: always
+        networks:
+            - backend
+
+networks:
+    backend:
