--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,48 @@
 version: "3.7"
 
 services:
-    nginx:
-        image: nginx
-        restart: always
-        volumes:
-            - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-        ports:
-            - "80:80"
-        networks:
-            - default
-            - backend
+  pihole:
+    container_name: pihole
+      image: pihole/pihole:latest
+      ports:
+        - "53:53/tcp"
+        - "53:53/udp"
+        - "67:67/udp"
+        - "80:80/tcp"
+        - "443:443/tcp"
+      environment:
+        TZ: 'America/Denver'
+        WEBPASSWORD: 'rawboned sleek divorcee meteoric oldster wadding'
+      volumes:
+        - './etc-pihole/:/etc/pihole/'
+        - './etc-dnsmasq.d/:/etc/dnsmasq.d/'
+      dns:
+        - 127.0.0.1
+        - 1.1.1.1
+      # Recommended but not required (DHCP needs NET_ADMIN)
+      #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
+      cap_add:
+        - NET_ADMIN
+      restart: unless-stopped
 
-    parking:
-        image: tylerdoll/better_parking_permits
-        restart: always
-        networks:
-            - backend
+  nginx:
+    image: nginx
+    restart: unless-stopped
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "80:80"
+    networks:
+      - default
+      - backend
+
+  parking:
+    image: tylerdoll/better_parking_permits
+    volumes:
+      - ./better-parking-permits/src:/app
+    restart: unless-stopped
+    networks:
+      - backend
 
 networks:
     backend:
