refac: more specific nginx rewrite rules

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,8 +3,10 @@ events {
 
 http {
     server {
-        location ~ /(\.+)/\.+ {
-            proxy_pass $1:$server_port;
+        location ~ /parking/? {
+            proxy_pass http://parking:5000;
+            rewrite ^/\w+/?$ / break;
+            rewrite /^\w+(/.+)$ $1 break;
         }
     }
 }
