--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     environment:
       TZ: 'America/Denver'
       WEBPASSWORD: 'rawboned sleek divorcee meteoric oldster wadding'
+      ServerIP: 192.168.0.11
     volumes:
       - './etc-pihole/:/etc/pihole/'
       - './etc-dnsmasq.d/:/etc/dnsmasq.d/'
