--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,6 @@
 version: "3.7"
 
 services:
-  jwilder-proxy:
-    image: jwilder/nginx-proxy
-    ports:
-      - '80:80'
-    environment:
-      DEFAULT_HOST: pihole.glados.lan
-    volumes:
-      - '/var/run/docker.sock:/tmp/docker.sock'
-    restart: unless-stopped
-
   pihole:
     container_name: pihole
     image: pihole/pihole:latest
@@ -23,10 +13,7 @@ services:
     environment:
       TZ: 'America/Denver'
       WEBPASSWORD: 'rawboned sleek divorcee meteoric oldster wadding'
-      ServerIP: 192.168.0.11
-      PROXY_LOCATION: pihole
-      VIRTUAL_HOST: pihole.glados.lan
-      VIRTUAL_PORT: 80
+      ServerIP: 192.168.0.130
     volumes:
       - './etc-pihole/:/etc/pihole/'
       - './etc-dnsmasq.d/:/etc/dnsmasq.d/'
@@ -39,11 +26,24 @@ services:
       - NET_ADMIN
     restart: unless-stopped
 
+  nginx:
+    image: nginx
+    restart: unless-stopped
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "80:80"
+    networks:
+      - default
+      - backend
+
   parking:
     image: tylerdoll/better_parking_permits
     volumes:
       - ./better-parking-permits/src:/app
-    environment:
-      VIRTUAL_HOST: parking.glados.lan
-      VIRTUAL_PORT: 80
     restart: unless-stopped
+    networks:
+      - backend
+
+networks:
+    backend:
