fix: ngnix config for parking

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,11 +2,23 @@ events {
 }
 
 http {
-    server {
-        location ~ /parking/? {
-            proxy_pass http://parking:5000;
-            rewrite ^/\w+/?$ / break;
-            rewrite /^\w+(/.+)$ $1 break;
-        }
-    }
+	server {
+	    listen 80 default_server;
+	    listen [::]:80 default_server;
+
+	    server_name _;
+
+	    location / {
+		proxy_pass http://pihole/;
+	    }
+	}
+	server {
+	    listen 80;
+
+	    server_name parking.glados;
+
+	    location / {
+		proxy_pass http://parking:5000/;
+	    }
+	}
 }
