--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,12 @@ services:
       - "53:53/tcp"
       - "53:53/udp"
       - "67:67/udp"
-      - "80:80/tcp"
       - "443:443/tcp"
     environment:
       TZ: 'America/Denver'
       WEBPASSWORD: 'rawboned sleek divorcee meteoric oldster wadding'
       ServerIP: 192.168.0.130
+      VIRTUAL_HOST: pihole.glados
     volumes:
       - './etc-pihole/:/etc/pihole/'
       - './etc-dnsmasq.d/:/etc/dnsmasq.d/'
