--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "80:80/tcp"
+      - "5000:5000/tcp"
     networks:
       - default
       - backend
@@ -42,8 +43,9 @@ services:
     volumes:
       - ./better-parking-permits/src:/app
     restart: unless-stopped
-    networks:
-      - backend
+    dns:
+      - 127.0.0.1
+      - 1.1.1.1
 
 networks:
     backend:
