--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,11 +14,14 @@ http {
 	}
 	server {
 	    listen 80;
+	    listen 5000;
 
 	    server_name parking.glados;
 
 	    location / {
-		proxy_pass http://parking:5000/;
+		resolver 127.0.0.11 ipv6=off;
+		set $container parking;
+		proxy_pass http://$container:$server_port;
 	    }
 	}
 }
