--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "better-parking-permits"]
-	path = better-parking-permits
-	url = git@github.com:tylerdoll/better-parking-permits.git
+[submodule "park_it_better"]
+	path = park_it_better
+	url = git@github.com:tylerdoll/park_it_better.git
