--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,13 +14,23 @@ http {
 	}
 	server {
 	    listen 80;
+
+	    server_name parking.glados;
+
+	    location / {
+		resolver 127.0.0.11 ipv6=off;
+		set $container parking_ui;
+		proxy_pass http://$container:$server_port;
+	    }
+	}
+	server {
 	    listen 5000;
 
 	    server_name parking.glados;
 
 	    location / {
 		resolver 127.0.0.11 ipv6=off;
-		set $container parking;
+		set $container parking_api;
 		proxy_pass http://$container:$server_port;
 	    }
 	}
