feat: park it better mongo db service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,3 +60,15 @@ services:
     dns:
       - 127.0.0.1
       - 1.1.1.1
+
+  parking_db:
+    extends:
+      file: park_it_better/docker-compose.yml
+      service: db
+    restart: unless-stopped
+    dns:
+      - 127.0.0.1
+      - 1.1.1.1
+
+volumes:
+  mongo:
