--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,7 @@ http {
 	server {
 	    listen 80;
 
-	    server_name parking.glados;
+	    server_name parking.com;
 
 	    location / {
 		resolver 127.0.0.11 ipv6=off;
@@ -26,7 +26,7 @@ http {
 	server {
 	    listen 5000;
 
-	    server_name parking.glados;
+	    server_name parking.com;
 
 	    location / {
 		resolver 127.0.0.11 ipv6=off;
