refac: pull out parking nginx conf to submodule

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,26 +12,8 @@ http {
 		proxy_pass http://pihole/;
 	    }
 	}
-	server {
-	    listen 80;
 
-	    server_name parking.com;
-
-	    location / {
-		resolver 127.0.0.11 ipv6=off;
-		set $container parking_ui;
-		proxy_pass http://$container:$server_port;
-	    }
-	}
-	server {
-	    listen 5000;
-
-	    server_name parking.com;
-
-	    location / {
-		resolver 127.0.0.11 ipv6=off;
-		set $container parking_api;
-		proxy_pass http://$container:$server_port;
-	    }
-	}
 }
+
+# Parking
+include ../park_it_better/nginx.conf;
