--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,41 @@ http {
 	    }
 	}
 
+    # UI
+    server {
+        listen 80;
+
+        server_name parking.com;
+
+        location / {
+        resolver 127.0.0.11 ipv6=off;
+        set $container parking_ui;
+        proxy_pass http://$container:$server_port;
+        }
+    }
+
+    # API
+    server {
+        listen 5000;
+
+        server_name parking.com;
+
+        location / {
+        resolver 127.0.0.11 ipv6=off;
+        set $container parking_api;
+        proxy_pass http://$container:$server_port;
+        }
+    }
 }
 
-# Parking
-include ../park_it_better/nginx.conf;
+stream {
+    # Database
+    server {
+        listen 27017;
+        listen 27018;
+        listen 27019;
+
+        resolver 127.0.0.11 ipv6=off;
+        proxy_pass http://parking_db:$server_port;
+    }
+}
